--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
+build = "setup.py"
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
@@ -19,5 +20,5 @@ scipy = "^1.9.1"
 
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core","cython"]
 build-backend = "poetry.core.masonry.api"
