--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,5 +21,5 @@ setuptools = "^65.3.0"
 
 
 [build-system]
-requires = ["poetry-core","cython"]
+requires = ["poetry-core","cython", "numpy","setuptools"]
 build-backend = "poetry.core.masonry.api"
