--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
-build = "setup.py"
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
@@ -14,10 +13,10 @@ networkx = "^2.8.6"
 nose = "^1.3.7"
 numpy = "^1.23.3"
 pandas = "^1.4.4"
-psycopg2 = "^2.9.3"
 PyYAML = "^6.0"
 scipy = "^1.9.1"
 setuptools = "^65.3.0"
+psycopg2-binary = "^2.9.3"
 
 
 [build-system]
