--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
+build = "build.py"
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
